<resources>
    <string name="app_name">LendIt</string>
    <string name="login_title">LOGIN</string>
    <string name="username_hint">Username (email)</string>
    <string name="password_hint">Password</string>
    <string name="or">Don\'t have an account yet?</string>
    <string name="signup" translatable="false">Signup</string>
    <string name="menu_home">Search</string>
    <string name="menu_saved">Saved</string>
    <string name="menu_add">Publish</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_profile">Profile</string>
    <string name="authentication_failed_message">The credentials you\'ve provided did not work. Please try again.</string>
    <string name="search_hint">Search</string>
    <string name="unsecure_password_error">Password must contain at least 6 characters</string>
    <string name="publish_title">Publish new ad</string>
    <string name="ad_title">Ad title</string>
    <string name="ad_description">Description</string>
    <string name="back_button_publish">Cancel</string>
    <string name="publish_publish_btn">Publish</string>
    <string name="publish_categories_header">Categories</string>
    <string name="credentials_empty">Credentials cannot be empy</string>
    <string name="login_required_post">You must be signed in to post a new ad</string>
    <string name="posted_by_text">Posted by</string>
    <string name="upload_select_category">Select a category</string>
    <string name="publish_select_upload_image">Choose and upload image</string>
    <string name="storage_permission_needed">The app needs to access your storage to upload an image. Please grant the access to your storage</string>
    <string name="image_upload_failed">The image upload has failed. Please try again.</string>
    <string name="name_display">User name to display publicly</string>
    <string name="upload_address">Location</string>
    <string name="publish_price">Price (can be 0)</string>
    <string name="password_requirements">Password must contain at least an uppercase letter, a lowercase letter, a number and a symbol</string>
    <string name="missing_location">Cannot acquire location. Location is required to publish a post. Verify that the app has the permission and try again</string>
    <string name="please_fill_fields">All fields must be filled</string>
    <string name="available_until">Available until</string>
    <string name="distance_selector_prompt">Max distance</string>
    <string name="any_distance">Any distance</string>
    <string name="keywords">Keywords separated by comma (e.g hammer, wall)</string>
    <string name="items_db_name" translatable="false">available_items</string>
    <string name="message_user">Message the user</string>
    <string name="details_distance">"Distance from you: "</string>
    <string name="messages_title">Messages</string>
    <string name="profile_title">Profile</string>
    <string name="chat_send_message_placeholder">Write your message here..</string>
    <string name="send">Send</string>
    <string name="chat_yourself_no">You can\'t chat with yourself!</string>
    <string name="review_user">Review this user</string>
    <string name="delete_post">Delete your post</string>
    <string name="city_name">City</string>
    <string name="user_address">Address</string>
    <string name="start_lend">Lend</string>
    <string name="chat_exists">You\'re chatting with this user about this item already</string>
    <string name="lend_started">Lend started! Meet the other user as discussed</string>
    <string name="end_lend">End lend</string>
    <string name="lend_ended">Lend ended. You can review the user if you\'d like</string>
    <string name="review_only_after_end">You can review this user only after the lend has ended</string>
    <string name="invalid_image">The selected image is not valid</string>
    <string name="subtitle_profile">Here you can see all your published items or logout</string>
    <string name="logout_button">Logout</string>
</resources>
