<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.PublishFragment"
    android:windowSoftInputMode="adjustNothing"
    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish_title"
        android:id="@+id/title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_below="@id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout android:layout_height="wrap_content" android:layout_width="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleBoxLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ad_title"
                app:hintEnabled="true"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_centerHorizontal="true"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoCorrect" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ad_description"
                app:hintEnabled="true"
                android:layout_below="@id/titleBoxLayout"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_centerHorizontal="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="8"
                    android:gravity="top|start"
                    android:maxLines="12"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/categories"
                android:layout_below="@id/descriptionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:prompt="@string/publish_categories_header"/>

            <ImageView
                android:layout_below="@id/categories"
                android:id="@+id/image_preview"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_choose_image"
                android:layout_below="@id/image_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/publish_select_upload_image" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/available_until"
                app:hintEnabled="true"
                android:layout_below="@id/btn_choose_image"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_centerHorizontal="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoCorrect" />
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>
     </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            android:layout_alignParentTop="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_margin="5dp"
            android:textColor="@color/colorAccent"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:text="@string/back_button_publish"/>

        <com.google.android.material.button.MaterialButton
            android:layout_alignParentBottom="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_margin="5dp"
            android:id="@+id/publishButton"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/publish_publish_btn"
            android:layout_alignEnd="@id/cancel"/>
    </LinearLayout>

</RelativeLayout>